# mr-dale

./: .flake8  .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: test_on_push.yaml
mr_dale/: __main__.py  admin.py  bot.py  config.py  server.py  utilites.py
mr_dale/ui_resources/: startup.json
src/: server.py
src/mr_dale/: bot.py  config.py
tests/: test_mr_dale.py
